// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Calendar component Month switcher: Click on arrows and check calendar table 1`] = `
<td
  class="jsx-3390703719"
  data-testid="table-cell-0-1"
>
  <div
    class="jsx-3877038798 calendar-cell is-today"
  >
    <div
      class="jsx-3877038798 day"
    >
      1
    </div>
    <div
      class="jsx-3877038798 plus"
      data-testid="add-event-2019-01-02T00:00:00.000Z"
      role="button"
    >
      +
    </div>
  </div>
</td>
`;

exports[`Test Calendar component Month switcher: Click on arrows and check calendar table 2`] = `
<td
  class="jsx-3390703719"
  data-testid="table-cell-4-3"
>
  <div
    class="jsx-3877038798 calendar-cell "
  >
    <div
      class="jsx-3877038798 day"
    >
      31
    </div>
    <div
      class="jsx-3877038798 plus"
      data-testid="add-event-2019-02-01T00:00:00.000Z"
      role="button"
    >
      +
    </div>
  </div>
</td>
`;

exports[`Test Calendar component Month switcher: Click on arrows and check calendar table 3`] = `
<td
  class="jsx-3390703719"
  data-testid="table-cell-0-4"
>
  <div
    class="jsx-3877038798 calendar-cell "
  >
    <div
      class="jsx-3877038798 day"
    >
      1
    </div>
    <div
      class="jsx-3877038798 plus"
      data-testid="add-event-2019-02-02T00:00:00.000Z"
      role="button"
    >
      +
    </div>
  </div>
</td>
`;

exports[`Test Calendar component Month switcher: Click on arrows and check calendar table 4`] = `
<td
  class="jsx-3390703719"
  data-testid="table-cell-4-4"
/>
`;
